# laser-ion-paper-digest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
configs/: queries.json
data/: papers.sqlite
docs/: search_strategy.md
reports/2026/: 2026-07-02.md  2026-07-03.md  2026-07-06.md  2026-07-07.md  2026-07-09.md  2026-07-12.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-23.md
src/paper_digest/: __init__.py  arxiv.py  cli.py  config.py  models.py  ranking.py  report.py  sources.py  store.py  summarizer.py
tests/: test_arxiv.py  test_cli.py  test_models.py  test_ranking.py  test_report.py  test_sources.py  test_store.py
