[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laser-ion-paper-digest"
version = "0.1.0"
description = "Daily arXiv digest for laser-driven ion acceleration papers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "paper-digest-bot" }]
dependencies = []

[project.scripts]
paper-digest = "paper_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
